squished the view modal a little bit, and added zero padding to hopefully get rid of bug where images are not all on the same line.

--- a/css/sass/viewer_settings_modal.scss
+++ b/css/sass/viewer_settings_modal.scss
@@ -16,7 +16,7 @@
 		border: 1px solid #777;
 		@include border-radius(2px);
 		padding: 5px;
-		height: 100px;
+		height: 80px;
 		overflow: hidden;
 		text-align: left;
 	}
@@ -26,7 +26,7 @@
 		font-family: Helvetica,Arial,sans-serif;
 		font-size: 12px;
 		color: #777;
-		margin: 14px 0px;
+		margin: 12px 0px;
 		padding: 0px;
 	}
 
@@ -53,6 +53,8 @@
 		display: inline-block;
 		width: 43px;
 		height: 60px;
+		margin: 0;
+		padding: 0;
 		background-repeat: no-repeat;
 		@include user-select(none);
 	}
